app/styles/app.css
@import "tailwindcss/base";

@import "tailwindcss/components";

/* @import "components.css"; */

@import "tailwindcss/utilities";

body {
  @apply font-sans overflow-x-hidden font-abnormal;
}

.nav-dropdown-menu {
  left: 2.75rem;
  top: 1.75rem;
}

.text-box h2 {
  @apply text-2xl font-medium;
}

.text-box p {
  @apply pb-6 md:pb-8;
}

.text-box a {
  @apply underline
}


.unmute-logo {
  width: 28%;
}

.nav-clips.active {
  @apply text-unred underline;
}

.nav-about.active {
  @apply text-unpurple underline;
}

.nav-teams.active {
  @apply text-ungreen underline;
}

.nav-artists.active {
  @apply text-unblue underline;
}

.video-wrapper iframe {
  width: 100vw;
  height: 56.25vw;
  min-height: 100vh;
  min-width: 177.77vh;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.video-wrapper {
  pointer-events: none;
  z-index: -1;
  overflow: hidden;
  @apply fixed top-0 left-0 w-full h-full 
}

.video-image-overlay {
  background-size: 2%;
  background-image: url(/assets/png/checkerboard.png);
  background-position: center;
  image-rendering: pixelated;
  display: block;
  @apply absolute top-0 left-0 bottom-0 right-0 z-0 h-full w-full;
}

.carousel-credit {
  @apply w-full h-full absolute top-0 left-0 bottom-0 right-0 flex flex-col justify-end;
}

.carousel-image {
  z-index: -1;
  @apply w-full h-full flex justify-center items-center overflow-hidden;
}


.clip-tile.active rect.red.inverse, 
.clip-tile.active polygon.green, 
.clip-tile rect.red, 
.clip-tile rect.green.inverse, 
.clip-tile polygon.green,
.team-clip-tile rect.red.inverse,
.team-clip-tile rect.green,
.team-clip-tile polygon.red,
.team-clip-tile.active polygon.red,
.team-clip-tile.active rect.green.inverse,
.text-box.text-ungreen a:hover,
.active .tile-text.text-ungreen {
  color: #ff3000;
  fill: #ff3000;
}

.clip-tile.active rect.green.inverse, 
.clip-tile.active polygon.red, 
.clip-tile rect.green, 
.clip-tile rect.red.inverse, 
.clip-tile polygon.red,
.team-clip-tile polygon.green,
.team-clip-tile rect.green.inverse,
.team-clip-tile rect.red,
.team-clip-tile.active polygon.green,
.team-clip-tile.active rect.red.inverse,
.text-box.text-unred a:hover,
.active .tile-text.text-unred {
  color: #048e35;
  fill: #048e35;
}

.clip-tile.active rect.brown.inverse, 
.clip-tile.active polygon.blue, 
.clip-tile.active polygon.purple, 
.clip-tile rect.brown, 
.clip-tile rect.blue.inverse, 
.clip-tile rect.purple.inverse, 
.clip-tile polygon.purple, 
.clip-tile polygon.blue,
.team-clip-tile polygon.brown,
.team-clip-tile.active rect.blue.inverse,
.team-clip-tile.active polygon.brown,
.team-clip-tile rect.brown.inverse,
.team-clip-tile rect.blue,
.text-box.text-unpurple a:hover,
.text-box.text-unblue a:hover,
.active .tile-text.text-unblue, .active .tile-text.text-unpurple {
  color: #9b591e;
  fill: #9b591e;
}
.clip-tile.active rect.blue.inverse, 
.clip-tile.active polygon.brown, 
.clip-tile rect.blue, 
.clip-tile rect.brown.inverse, 
.clip-tile polygon.brown,
.team-clip-tile polygon.blue,
.team-clip-tile.active rect.brown.inverse,
.team-clip-tile.active polygon.blue,
.team-clip-tile rect.blue.inverse,
.team-clip-tile rect.brown,
.text-box.text-unbrown a:hover,
.active .tile-text.text-unbrown {
  color: #0963b5;
  fill: #0963b5;
}

.clip-tile.active rect.purple.inverse, 
.clip-tile rect.purple {
  fill: #6043ba;
}

.clip-tile polygon.inverse, .team-clip-tile polygon.inverse {
  fill: white;
}

.clip-play-box {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
}

.active .name-tile {
  visibility: visible;
}

.swallowtail {
  min-width: 1rem;
}

